--- a/src/backdrops/EditConsultation/locales/pl.json
+++ b/src/backdrops/EditConsultation/locales/pl.json
@@ -9,6 +9,6 @@
   "tuesday": "Wt.",
   "wednesday": "Śr.",
   "thursday": "Czw.",
-  "friday": "Piąt.",
+  "friday": "Pt.",
   "saturday": "Sob."
 }
