--- a/src/blocks/MascotWelcomeHeader/locales/pl.json
+++ b/src/blocks/MascotWelcomeHeader/locales/pl.json
@@ -5,9 +5,9 @@
   "create_account_button": "Utwórz konto",
   "next_consultation": "Następna konsultacja:",
   "change_button_label": "Zmiana",
-  "accept_button_label": "Akceptuj konsultację",
+  "accept_button_label": "Zaakceptuj konsulatcję",
   "join_button_label": "Dołącz",
-  "schedule_button_label": "Harmonogram",
+  "schedule_button_label": "Kalendarz",
   "live_label": "Teraz",
   "no_consultations": "Obecnie nie masz nadchodzących konsultacji",
   "free": "Wolny",
