--- a/src/blocks/Notifications/locales/pl.json
+++ b/src/blocks/Notifications/locales/pl.json
@@ -2,7 +2,7 @@
   "heading": "Powiadomienia",
   "mark_read": "Oznacz wszystkie jako przeczytane",
   "consultation_booking": "Twoja konsultacja z {{providerName}} została pomyślnie zaplanowana na {{date}} od {{startHour}} do {{endHour}}",
-  "consultation_reschedule": "Pomyślnie przełożyłeś konsultację z {{date}} od {{startHour}} do {{endHour}} na {{newDate}} od {{newStartHour}} do {{newEndHour}}",
+  "consultation_reschedule": "Twoja konsultacja została przełożona z {{date}} ({{startHour}} - {{endHour}}) na {{newDate}} ({{newStartHour}} - {{newEndHour}}).",
   "consultation_cancellation": "Pomyślnie anulowałeś konsultację z {{providerName}} zaplanowaną na {{date}} od {{startHour}} do {{endHour}}",
   "consultation_cancellation_provider": "Konsultant {{providerName}} anulował konsultację zaplanowaną w dniu {{date}} od {{startHour}} do {{endHour}}",
   "consultation_remind_start": "Nadchodząca konsultacja za {{minutes}} minut",
@@ -10,9 +10,9 @@
   "consultation_suggestion_booking": "Zaakceptowałeś sugerowaną konsultację z {{providerName}} na {{date}} od {{startHour}} do {{endHour}}",
   "consultation_suggestion_cancellation": "Odrzuciłeś sugerowaną konsultację z {{providerName}} na {{date}} od {{startHour}} do {{endHour}}",
   "consultation_started": "Rozpoczęła się konsultacja z konsultantem  {{providerName}}",
-  "question_answered": "{{providerName}} odpowiedział na Twoje pytanie",
+  "question_answered": "{{providerName}} odpowiedział na Twoje pytania",
   "join": "Dołącz",
-  "accept": "Akceptuj",
+  "accept": "Zaakceptuj",
   "accept_consultation_success": "Konsultacja została pomyślnie zaakceptowana",
   "reject": "Odrzuć ",
   "reject_consultation_success": "Konsultacja została pomyślnie odrzucona",
