--- a/src/blocks/PlatformRating/locales/pl.json
+++ b/src/blocks/PlatformRating/locales/pl.json
@@ -3,5 +3,5 @@
   "textarea_label": "Twój komentarz",
   "textarea_placeholder": "Zostaw swój komentarz tutaj",
   "button_label": "Wyślij ocenę",
-  "success": "Ocena została pomyślnie wysłana"
+  "success": "Twoja ocena została wysłana. "
 }
