--- a/src/blocks/RegisterAnonymous/locales/pl.json
+++ b/src/blocks/RegisterAnonymous/locales/pl.json
@@ -5,13 +5,13 @@
   "paragraph_1": "Twój anonimowy kod dostępu to",
   "password_label": "Hasło *",
   "terms_agreement_text_1": "Zgadzam się z",
-  "terms_agreement_text_2": "Polityka prywatności",
+  "terms_agreement_text_2": "Polityką prywatności",
   "terms_agreement_text_3": "oraz",
-  "terms_agreement_text_4": "Warunki użytkowania",
+  "terms_agreement_text_4": "Regulaminem",
   "password_error": "Hasło powinno zawierać co najmniej 8 znaków, 1 wielką literę, 1 małą literę i 1 cyfrę.",
   "register_button_label": "Rejestracja",
   "login_button_label": "Już posiadam konto",
-  "copy_text": "Skopiuj i zapisz lub zanotuj swój anonimowy kod, jeśli go zgubisz, nie będziesz mieć dostępu do swojego konta.",
+  "copy_text": "Skopiuj i zapisz lub zanotuj swój anonimowy kod. Jeśli go zgubisz, nie będziesz mieć dostępu do swojego konta.",
   "copy_success": "Kod został pomyślnie skopiowany",
   "confirm_password_label": "Potwierdź hasło",
   "password_match_error": "Pola Hasło i Potwierdź hasło nie są zgodne",
