--- a/src/blocks/RegisterEmail/locales/pl.json
+++ b/src/blocks/RegisterEmail/locales/pl.json
@@ -7,9 +7,9 @@
   "nickname_error": "Nick jest wymagany",
   "password_label": "Hasło *",
   "terms_agreement_text_1": "Zgadzam się z",
-  "terms_agreement_text_2": "Polityka prywatności",
+  "terms_agreement_text_2": "Polityką prywatności",
   "terms_agreement_text_3": "oraz",
-  "terms_agreement_text_4": "Warunki użytkowania",
+  "terms_agreement_text_4": "Regulaminem",
   "register_button": "Rejestracja",
   "paragraph": "Lub zarejestruj się za pomocą:",
   "login_button_label": "Już posiadam konto",
