--- a/src/blocks/RegisterPreview/locales/pl.json
+++ b/src/blocks/RegisterPreview/locales/pl.json
@@ -1,9 +1,9 @@
 {
   "register_email": "Zarejestruj się za pomocą adresu e-mail",
-  "register_anonymously": "Rejestracja bez adresu e-mail",
+  "register_anonymously": "Rejestracja anonimowa",
   "continue_as_guest": "Kontynuuj bez rejestracji",
   "heading_1": "Informacje o platformie",
-  "text_1": "Platforma, która szanuje twoją prywatność i bezpieczeństwo. Twoje dobre samopoczucie jest naszym priorytetem! uSupport zapewnia spersonalizowaną i dyskretną opiekę psychologiczną.",
+  "text_1": "Platforma szanuje twoją prywatność i bezpieczeństwo. Twoje dobre samopoczucie jest naszym priorytetem! uSupport zapewnia spersonalizowaną i dyskretną opiekę psychologiczną.",
   "heading_2": "Informacje o wsparciu",
   "text_2": "uSupport to platforma poświęcona zdrowiu psychicznemu, dobrostanowi psychospołecznemu i dobremu samopoczuciu, przeznaczona dla młodych ludzi i ich opiekunów, gdzie prywatność i bezpieczeństwo są priorytetem.",
   "heading_3": "O Tobie",
