--- a/src/blocks/SafetyFeedback/locales/pl.json
+++ b/src/blocks/SafetyFeedback/locales/pl.json
@@ -1,7 +1,7 @@
 {
   "heading": "To ważne. Przeczytaj i wypełnij",
   "subheading": "Odpowiedz zgodnie z prawdą na wszystkie pytania.",
-  "warning": "Odpowiadając, oświadczasz, że to oświadczenie jest prawdziwe i składasz je, wiedząc, że złożenie oświadczenia, o którym wiesz, że jest nieprawdziwe, jest przestępstwem.",
+  "warning": "Odpowiadając, oświadczasz, że niniejsze oświadczenie jest prawdziwe i składasz je ze świadomością, że złożenie oświadczenia, które jest nieprawdziwe, stanowi przestępstwo.",
   "q0": "Czy konsultant dołączył do sesji?",
   "q1": "Czy konsultant poprosił Cię o ujawnienie adresu i szczegółów kontaktowych? ",
   "q2": "Czy konsultant poprosił Cię o spotkanie poza systemem (osobiście lub w innej aplikacji)?",
