--- a/src/blocks/UserProfile/locales/pl.json
+++ b/src/blocks/UserProfile/locales/pl.json
@@ -8,11 +8,11 @@
   "rate_us_button_label": "Wystaw nam ocenę",
   "share_button_label": "Udostępnianie aplikacji",
   "contact_us_button_label": "Skontaktuj się z nami",
-  "privacy_policy_button_label": "Polityka prywatności",
+  "privacy_policy_button_label": "Polityką prywatności",
   "FAQ_button_label": "Najczęściej zadawane pytania",
   "mood_tracker_button_label": "Monitor nastroju",
   "payments_history_button_label": "Historia płatności",
-  "terms_of_use": "Warunki użytkowania",
-  "cookie_policy": "Polityka plików cookie",
+  "terms_of_use": "Regulaminem",
+  "cookie_policy": "Polityka plików cookies",
   "user_guide": "Wykorzystanie platformy"
 }
