--- a/src/modals/PaymentInformation/locales/pl.json
+++ b/src/modals/PaymentInformation/locales/pl.json
@@ -9,6 +9,6 @@
   "address": "Adres firmy: ",
   "email_address": "Adres email: ",
   "price": "Cena: ",
-  "view_receipt": "Wyświetl paragon",
+  "view_receipt": "Pokaż paragon",
   "text_audio_video_consultation": "Konsultacje online"
 }
