--- a/src/pages/MyQA/locales/pl.json
+++ b/src/pages/MyQA/locales/pl.json
@@ -1,6 +1,6 @@
 {
-    "all": "Wszystkie",
-    "most_popular": "Najpopularniejsze",
-    "newest": "Najnowsze",
-    "your_questions": "Twoje pytanie"
+  "all": "Wszystkie",
+  "most_popular": "Najpopularniejsze",
+  "newest": "Najnowsze",
+  "your_questions": "Twoje pytania"
 }
