--- a/src/pages/NotificationPreferences/locales/pl.json
+++ b/src/pages/NotificationPreferences/locales/pl.json
@@ -1,4 +1,4 @@
 {
   "heading": "Ustawienia powiadomień",
-  "subheading": "Tutaj możesz zarządzać typem powiadomień, które chcesz otrzymywać lub nie."
+  "subheading": "Tutaj możesz zarządzać typami powiadomień, które chcesz otrzymywać."
 }
