--- a/src/backdrops/ConfirmConsultation/locales/pl.json
+++ b/src/backdrops/ConfirmConsultation/locales/pl.json
@@ -1,17 +1,17 @@
 {
-    "heading": "Twoje spotkanie zostało zarezerwowane",
-    "ctaLabel": "Kontynuuj",
-    "text": "na {{startDate}} {{month}} {{year}} dla terminu od {{startTime}} do {{endTime}}. Można go zmienić w dowolnym momencie za pośrednictwem aplikacji.",
-    "january": "Styczeń",
-    "february": "Luty",
-    "march": "Marzec",
-    "april": "Kwiecień",
-    "may": "Maj",
-    "june": "Czerwiec",
-    "july": "Lipiec",
-    "august": "Sierpień",
-    "september": "Wrzesień",
-    "october": "Październik",
-    "november": "Listopad",
-    "december": "Grudzień"
+  "heading": "Twoja konsultacja została zarezerwowana",
+  "ctaLabel": "Kontynuuj",
+  "text": "na {{startDate}} {{month}} {{year}} dla terminu od {{startTime}} do {{endTime}}. Możesz zmienić termin w dowolnym momencie za pomocą aplikacji.",
+  "january": "Styczeń",
+  "february": "Luty",
+  "march": "Marzec",
+  "april": "Kwiecień",
+  "may": "Maj",
+  "june": "Czerwiec",
+  "july": "Lipiec",
+  "august": "Sierpień",
+  "september": "Wrzesień",
+  "october": "Październik",
+  "november": "Listopad",
+  "december": "Grudzień"
 }
