--- a/src/backdrops/SafetyFeedback/locales/pl.json
+++ b/src/backdrops/SafetyFeedback/locales/pl.json
@@ -1,9 +1,9 @@
 {
-    "heading": "Czy podczas spotkania czułeś/czułaś się bezpiecznie?",
-    "subheading": "Opowiedz nam więcej o swoich doświadczeniach z ostatniej konsultacji.",
-    "option_yes_label": "Tak",
-    "option_no_label": "Nie",
-    "cta_button_label": "Wyślij opinię",
-    "textarea_placeholder": "Symbol zastępczy",
-    "textarea_label": "Powiedz nam, co Cię zaniepokoiło (opcjonalnie)"
+  "heading": "Czy podczas spotkania czułeś/czułaś się bezpiecznie?",
+  "subheading": "Opowiedz nam więcej o swoich doświadczeniach z ostatniej konsultacji.",
+  "option_yes_label": "Tak",
+  "option_no_label": "Nie",
+  "cta_button_label": "Wyślij opinię",
+  "textarea_placeholder": "Tekst zastępczy",
+  "textarea_label": "Powiedz nam, co Cię zaniepokoiło (opcjonalnie)"
 }
