--- a/src/blocks/Articles/locales/pl.json
+++ b/src/blocks/Articles/locales/pl.json
@@ -4,7 +4,7 @@
   "could_not_load_content": "Brak wyników dla aktualnie wybranego kraju i języka.",
   "all": "Wszystkie",
   "read_more_button": "Czytaj więcej",
-  "min_read": "min czytania",
+  "min_read": "min. czytania",
   "by": "Przez {{creator}}",
   "number_of_more_options": "jeszcze {{count}}"
 }
