--- a/src/blocks/Consultations/locales/pl.json
+++ b/src/blocks/Consultations/locales/pl.json
@@ -6,7 +6,7 @@
   "tuesday": "Wt.",
   "wednesday": "Śr.",
   "thursday": "Czw.",
-  "friday": "Piąt.",
+  "friday": "Pt.",
   "saturday": "Sob.",
   "no_upcoming_consultations": "Nie masz żadnych nadchodzących konsultacji",
   "no_past_consultations": "Nie masz żadnych wcześniejszych konsultacji",
