--- a/src/blocks/MoodTrackHistory/locales/pl.json
+++ b/src/blocks/MoodTrackHistory/locales/pl.json
@@ -1,10 +1,10 @@
 {
-  "happy": "Szczęśliwy",
-  "good": "Dobry",
-  "sad": "Smutny",
-  "depressed": "Przygnębiony",
-  "worried": "Zmartwiony",
-  "you_felt": "Poczułeś/Poczułaś",
+  "happy": "Szczęśliwy/a/a",
+  "good": "Dobrze",
+  "sad": "Smutny/a",
+  "depressed": "Przygnębiony/a/a",
+  "worried": "Zmartwiony/a/a",
+  "you_felt": "Poczułeś/aś",
   "comment_text": "i skomentowałeś/skomentowałaś:",
   "no_result": "Nie znaleziono żadnych wyników."
 }
