--- a/src/blocks/MoodTracker/locales/pl.json
+++ b/src/blocks/MoodTracker/locales/pl.json
@@ -1,12 +1,12 @@
 {
-  "happy": "Szczęśliwy",
-  "good": "Dobry",
-  "sad": "Smutny",
-  "depressed": "Przygnębiony",
-  "worried": "Zmartwiony",
+  "happy": "Szczęśliwy/a",
+  "good": "Dobrze",
+  "sad": "Smutny/a",
+  "depressed": "Przygnębiony/a",
+  "worried": "Zmartwiony/a",
   "heading": "Jak się dziś czujesz?",
   "mood_tracker": "Monitor nastroju",
   "additional_comment_placeholder": "Co sprawiło, że tak się poczułeś?",
   "submit_mood_track": "Prześlij",
-  "add_mood_tracker_success": "Twój codzienny nastrój został pomyślnie dodany"
+  "add_mood_tracker_success": "Twój dzisiejszy nastrój został pomyślnie dodany"
 }
