--- a/src/blocks/MoodTrackerHistory/locales/pl.json
+++ b/src/blocks/MoodTrackerHistory/locales/pl.json
@@ -1,11 +1,11 @@
 {
-    "heading": "Ogólnie rzecz biorąc, czułeś się/czułaś się {{feeling}} w ciągu ostatnich 30 dnik",
-    "perfect": "Doskonale",
-    "happy": "Szczęśliwy",
-    "sad": "Smutny",
-    "depressed": "Przygnębiony",
-    "worried": "Zmartwiony",
-    "last_thirty_days_text": "W ciągu ostatnich 30 dni zgłaszałeś(-aś), że czułeś(-aś) się:",
-    "time": "raz",
-    "times": "razy"
+  "heading": "Ogólnie rzecz biorąc, czułeś się/czułaś się {{feeling}} w ciągu ostatnich 30 dnik",
+  "perfect": "Doskonale",
+  "happy": "Szczęśliwy/a",
+  "sad": "Smutny",
+  "depressed": "Przygnębiony/a",
+  "worried": "Zmartwiony/a",
+  "last_thirty_days_text": "W ciągu ostatnich 30 dni zgłaszałeś(-aś), że czułeś(-aś) się:",
+  "time": "raz",
+  "times": "razy"
 }
