--- a/src/blocks/MyQA/locales/pl.json
+++ b/src/blocks/MyQA/locales/pl.json
@@ -1,6 +1,6 @@
 {
-  "ask_button_label": "Zapytaj anonimowo",
-  "answer_by": "Odpowiedziane przez:",
+  "ask_button_label": "Zadaj pytanie anonimowo",
+  "answer_by": "Odpowiedź udzielona przez:",
   "schedule_consultation": "Zaplanuj konsultację",
   "today": "Dzisiaj",
   "archive": "Archiwum",
@@ -9,7 +9,7 @@
   "all": "Wszystkie",
   "most_popular": "Najpopularniejsze",
   "newest": "Najnowsze",
-  "your_questions": "Twoje pytanie",
+  "your_questions": "Twoje pytania",
   "search_placeholder": "Wyszukiwanie",
   "filter": "Filtruj tagi",
   "no_answers_found": "Nie ma odpowiedzi na żadne pytania",
