--- a/src/blocks/Page/locales/pl.json
+++ b/src/blocks/Page/locales/pl.json
@@ -8,9 +8,9 @@
   "footer_2": "Konsultacje",
   "footer_3": "Portal informacyjny",
   "footer_4": "Twój profil",
-  "footer_5": "Warunki",
-  "footer_6": "Polityka prywatności",
-  "footer_7": "Ustawienia plików cookie",
+  "footer_5": "Regulamin",
+  "footer_6": "Polityką prywatności",
+  "footer_7": "Ustawienia plików cookies",
   "footer_8": "Najczęściej zadawane pytania",
 
   "emergency_button": "Centrum SOS",
@@ -20,7 +20,7 @@
   "your_profile_text": "Twój profil",
 
   "password_placeholder": "Hasło",
-  "password": "Wprowadź hasło aby uzyskać dostęp do platformy",
+  "password": "Wprowadź hasło, aby uzyskać dostęp do platform",
   "wrong_password": "Nieprawidłowe hasło",
   "submit": "Wyślij",
 
@@ -31,6 +31,6 @@
   "cookie_banner_text": "Ta strona używa plików cookie, aby poprawić i zabezpieczyć Twoje doświadczenia podczas przeglądania. Korzystając z naszej strony, zgadzasz się na naszą <0>Politykę Cookie</0>.",
   "accept_all_cookies": "Akceptuj wszystkie",
   "reject_all_cookies": "Odrzuć wszystkie",
-  "accept_necessary_cookies": "Akceptuj tylko niezbędne",
+  "accept_necessary_cookies": "Akceptuj tylko wymagane",
   "save": "Zapisz"
 }
