--- a/src/blocks/UserDetails/locales/pl.json
+++ b/src/blocks/UserDetails/locales/pl.json
@@ -10,7 +10,7 @@
   "name_placeholder": "Wpisz swoje imię",
   "surname": "Nazwisko",
   "surname_placeholder": "Wpisz swoje nazwisko",
-  "email_error": "Wprowadź ważny adres email",
+  "email_error": "Podaj poprawny adres e-mail.",
   "sex": "Płeć",
   "year_of_birth": "Rok urodzenia",
   "country": "Kraj",
@@ -33,8 +33,8 @@
   "place_of_living_urban": "Miejski",
   "place_of_living_rural": "Wiejski",
   "data_processing_modal_heading": "Czy na pewno chcesz usunąć zgodę na wykorzystywanie Twoich danych osobowych zgodnie z <0>Polityką prywatności</0>?",
-  "data_processing_modal_text": "Nie będziesz mógł zaplanować dalszych konsultacji.",
-  "data_processing_modal_confirm_button": "Usuń uprawnienia",
+  "data_processing_modal_text": "Nie będziesz mógł zaplanować kolejnych konsultacji.",
+  "data_processing_modal_confirm_button": "Wycofaj zgodę",
   "data_processing_modal_cancel_button": "Anuluj",
   "success_message": "Profil został pomyślnie zaktualizowany",
   "sex_placeholder": "Wprowadź swoją płeć",
