--- a/src/modals/CreateQuestion/locales/pl.json
+++ b/src/modals/CreateQuestion/locales/pl.json
@@ -1,9 +1,9 @@
 {
   "heading": "Zadaj swoje pytanie tutaj",
-  "subheading": "Twoje pytanie będzie w 100% anonimowe i nikt nie zobaczy, że jesteś jego autorem.",
-  "text_area_label": "Twoje pytanie",
+  "subheading": "Twoje pytania będzie w 100% anonimowe i nikt nie zobaczy, że jesteś jego autorem.",
+  "text_area_label": "Twoje pytania",
   "send_your_question": "Wyślij swoje pytanie",
   "cancel": "Anuluj",
-  "success_toast": "Twoje pytanie zostało wysłane!",
+  "success_toast": "Twoje pytania zostało wysłane!",
   "text_area_error_label": "Pytanie powinno mieć co najmniej 10 znaków"
 }
