--- a/src/modals/DeleteChatHistory/locales/pl.json
+++ b/src/modals/DeleteChatHistory/locales/pl.json
@@ -1,7 +1,7 @@
 {
-    "heading": "Czy na pewno chcesz usunąć wszystkie dane czatu?",
-    "subheading": "Działanie to jest nieodwracalne.",
-    "confirm": "Tak, usuń wszystkie moje dane czatu",
-    "cancel": "Nie, zachowaj moje dane czatu",
-    "success": "Twoje dane czatu zostały pomyślnie usunięte."
+  "heading": "Czy na pewno chcesz usunąć wszystkie dane czatu?",
+  "subheading": "Działanie to jest nieodwracalne.",
+  "confirm": "Tak, usuń wszystkie moje dane z czatu",
+  "cancel": "Nie, zachowaj moje dane z czatu",
+  "success": "Twoje dane z czatu zostały pomyślnie usunięte."
 }
