--- a/src/pages/FAQ/locales/pl.json
+++ b/src/pages/FAQ/locales/pl.json
@@ -1,4 +1,4 @@
 {
   "heading": "Najczęściej zadawane pytania",
-  "subheading": "Tutaj można znaleźć odpowiedzi na często zadawane pytania. Skontaktuj się z nami bezpośrednio, jeśli Twoje pytanie nie zostało tutaj wymienione."
+  "subheading": "Tutaj można znaleźć odpowiedzi na często zadawane pytania. Skontaktuj się z nami bezpośrednio, jeśli Twoje pytania nie zostało tutaj wymienione."
 }
