--- a/src/pages/MoodTracker/locales/pl.json
+++ b/src/pages/MoodTracker/locales/pl.json
@@ -1,4 +1,4 @@
 {
-    "heading": "Monitor nastroju",
-    "subheading": "Tutaj możesz sprawdzić śledzenie nastroju i postępy "
+  "heading": "Monitor nastroju",
+  "subheading": "Tutaj możesz sprawdzić swój monitor nastroju i postępy"
 }
