--- a/src/pages/UserProfile/locales/pl.json
+++ b/src/pages/UserProfile/locales/pl.json
@@ -1,5 +1,5 @@
 {
   "heading": "Twój profil",
-  "subheading": "Tutaj można znaleźć wszystkie informacje dotyczące profilu i ustawień konta.",
+  "subheading": "Tutaj możesz znaleźć wszystkie informacje dotyczące Twojego profilu i ustawień konta.",
   "button_label": "Wylogowanie"
 }
