--- a/src/routes/Root/locales/pl.json
+++ b/src/routes/Root/locales/pl.json
@@ -1,5 +1,5 @@
 {
   "heading": "Nadal tu jesteś?",
   "text": "Byłeś nieaktywny przez jakiś czas. Dla Twojego bezpieczeństwa automatycznie wylogujemy Cię za {{seconds}} sekund.",
-  "cta": "Wciąż tu jestem"
+  "cta": "Nadal tu jestem"
 }
