--- a/src/blocks/MyQA/locales/en.json
+++ b/src/blocks/MyQA/locales/en.json
@@ -6,7 +6,7 @@
   "archive": "Archive",
   "respond": "Respond",
   "read_more": "Read more",
-  "all": "All",
+  "all": "All languages",
   "most_popular": "Most Popular",
   "newest": "Newest",
   "your_questions": "Your Questions",
