--- a/src/blocks/MyQA/locales/kk.json
+++ b/src/blocks/MyQA/locales/kk.json
@@ -6,7 +6,7 @@
   "archive": "Мұрағат",
   "respond": "Жауап беру",
   "read_more": "Ары қарай оқу",
-  "all": "Барлығы",
+  "all": "Барлық тілдер",
   "most_popular": "Ең танымал",
   "newest": "Жаңа",
   "your_questions": "Сіздің сұрағыңыз",
