--- a/src/blocks/MyQA/locales/pl.json
+++ b/src/blocks/MyQA/locales/pl.json
@@ -6,7 +6,8 @@
   "archive": "Archiwum",
   "respond": "Odpowiedz",
   "read_more": "Czytaj więcej",
-  "all": "Wszystkie języki",
+  "all": "Wszystkie",
+  "all_languages": "Wszystkie języki",
   "most_popular": "Najpopularniejsze",
   "newest": "Najnowsze",
   "your_questions": "Twoje pytania",
