--- a/src/blocks/MyQA/locales/ru.json
+++ b/src/blocks/MyQA/locales/ru.json
@@ -6,7 +6,8 @@
   "archive": "Архив",
   "respond": "Ответить",
   "read_more": "Узнать больше",
-  "all": "Все языки",
+  "all": "Все",
+  "all_languages": "Все языки",
   "most_popular": "Самые популярные",
   "newest": "Новые",
   "your_questions": "Ваш вопрос",
