--- a/src/blocks/MyQA/locales/uk.json
+++ b/src/blocks/MyQA/locales/uk.json
@@ -6,7 +6,8 @@
   "archive": "Архів",
   "respond": "Відгукнутися",
   "read_more": "Читати далі",
-  "all": "Усі мови",
+  "all": "Усі",
+  "all_languages": "Усі мови",
   "most_popular": "Найпопулярніше",
   "newest": "Найновіше",
   "your_questions": "Ваше запитання",
