--- a/src/blocks/ProviderOverview/locales/pl.json
+++ b/src/blocks/ProviderOverview/locales/pl.json
@@ -9,7 +9,7 @@
   "edit_details": "Edytuj szczegóły",
   "change_password": "Zmień hasło",
   "delete_account": "Usuń konto",
-  "no_available_slot": "Nie ma dostępnego przedziału czasowego",
+  "no_available_slot": "Brak dostępnych terminów",
   "consultations": "konsultacje",
 
   "psychologist": "Psycholog",
