--- a/src/blocks/MascotHeaderMyQA/locales/pl.json
+++ b/src/blocks/MascotHeaderMyQA/locales/pl.json
@@ -1,7 +1,7 @@
 {
   "heading": "Moje Pytania i odpowiedzi",
   "subheading_its": "To jest",
-  "subheading_anonymous": "ANONIMOWY",
+  "subheading_anonymous": "ANONIMOWE",
   "subheading_text1": "Twoje pytania",
   "subheading_not": "NIE",
   "subheading_text2": "są połączone z Tobą. Odpowiedzi będą publicznie dostępne, dzięki czemu wszyscy mogą zobaczyć, z jakimi zagadnieniami borykają się inni.",
