--- a/src/pages/InformationPortal/locales/uk.json
+++ b/src/pages/InformationPortal/locales/uk.json
@@ -7,5 +7,10 @@
   "view_all": "Переглянути всі",
   "read_more_button": "Читати далі",
   "min_read": "хв читання",
-  "by": "Від {{creator}}"
+  "by": "Від {{creator}}",
+  "articles": "Статті",
+  "videos": "Відео",
+  "heading_newest_videos": "Найновіші відео",
+  "heading_popular_videos": "Найпопулярніші відео",
+  "no_results": "Нічого не знайдено"
 }
