--- a/src/pages/InformationPortal/locales/ru.json
+++ b/src/pages/InformationPortal/locales/ru.json
@@ -7,5 +7,10 @@
   "view_all": "Посмотреть все",
   "read_more_button": "Узнать больше",
   "min_read": "минут на прочтение",
-  "by": "От {{creator}}"
+  "by": "От {{creator}}",
+  "articles": "Мақалалар",
+  "videos": "Видеолар",
+  "heading_newest_videos": "Жаңа Видеолар",
+  "heading_popular_videos": "Ең танымал Видеолар",
+  "no_results": "Нәтиже табылмады"
 }
