Add: Podcasts in the InformationPortal page

--- a/src/pages/InformationPortal/locales/kk.json
+++ b/src/pages/InformationPortal/locales/kk.json
@@ -12,5 +12,9 @@
   "videos": "Видеолар",
   "heading_newest_videos": "Жаңа Видеолар",
   "heading_popular_videos": "Ең танымал Видеолар",
-  "no_results": "Нәтиже табылмады"
+  "no_results": "Нәтиже табылмады",
+  "heading_newest_podcasts": "Жаңа Подкасттар",
+  "heading_popular_podcasts": "Ең танымал Подкасттар",
+  "podcasts": "Подкасттар",
+  "view_more": "Көбірек көру"
 }
