--- a/src/pages/InformationPortal/locales/en.json
+++ b/src/pages/InformationPortal/locales/en.json
@@ -12,5 +12,9 @@
   "videos": "Videos",
   "heading_newest_videos": "Newest Videos",
   "heading_popular_videos": "Most popular videos",
-  "no_results": "No results found"
+  "no_results": "No results found",
+  "heading_newest_podcasts": "Newest podcasts",
+  "heading_popular_podcasts": "Popular podcasts",
+  "podcasts": "Podcasts",
+  "view_more": "View more"
 }
