--- a/src/pages/InformationPortal/locales/ru.json
+++ b/src/pages/InformationPortal/locales/ru.json
@@ -12,5 +12,9 @@
   "videos": "Видеолар",
   "heading_newest_videos": "Жаңа Видеолар",
   "heading_popular_videos": "Ең танымал Видеолар",
-  "no_results": "Нәтиже табылмады"
+  "no_results": "Нәтиже табылмады",
+  "heading_newest_podcasts": "Новые аудиобаки",
+  "heading_popular_podcasts": "Самые популярные аудиобаки",
+  "podcasts": "Подкасты",
+  "view_more": "Больше посмотреть"
 }
