--- a/src/pages/InformationPortal/locales/uk.json
+++ b/src/pages/InformationPortal/locales/uk.json
@@ -12,5 +12,9 @@
   "videos": "Відео",
   "heading_newest_videos": "Найновіші відео",
   "heading_popular_videos": "Найпопулярніші відео",
-  "no_results": "Нічого не знайдено"
+  "no_results": "Нічого не знайдено",
+  "heading_newest_podcasts": "Найновіші аудіобаки",
+  "heading_popular_podcasts": "Найпопулярніші аудіобаки",
+  "podcasts": "Аудіобаки",
+  "view_more": "Більше переглянути"
 }
