Add: pass contentType to the CardMedia in Videos

--- a/src/blocks/Videos/locales/pl.json
+++ b/src/blocks/Videos/locales/pl.json
@@ -1,5 +1,5 @@
 {
-  "read_more_button": "Zobacz więcej",
+  "view_more": "Zobacz więcej",
   "all": "Wszystkie",
   "could_not_load_content": "Nie udało się załadować treści.",
   "no_results": "Brak wyników",
