--- a/src/blocks/Videos/locales/en.json
+++ b/src/blocks/Videos/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "read_more_button": "View more",
+  "view_more": "View more",
   "all": "All",
   "could_not_load_content": "Could not load content.",
   "no_results": "No results found",
