--- a/src/blocks/Videos/locales/kk.json
+++ b/src/blocks/Videos/locales/kk.json
@@ -1,5 +1,5 @@
 {
-  "read_more_button": "Көбірек көру",
+  "view_more": "Көбірек көру",
   "all": "Барлығы",
   "could_not_load_content": "Мазмұнды жүктеу мүмкін болмады.",
   "no_results": "Нәтиже табылмады",
