--- a/src/blocks/Videos/locales/ru.json
+++ b/src/blocks/Videos/locales/ru.json
@@ -1,5 +1,5 @@
 {
-  "read_more_button": "Посмотреть больше",
+  "view_more": "Посмотреть больше",
   "all": "Все",
   "could_not_load_content": "Не удалось загрузить контент.",
   "no_results": "Результаты не найдены",
