--- a/src/blocks/Videos/locales/uk.json
+++ b/src/blocks/Videos/locales/uk.json
@@ -1,5 +1,5 @@
 {
-  "read_more_button": "Переглянути більше",
+  "view_more": "Переглянути більше",
   "all": "Усі",
   "could_not_load_content": "Не вдалося завантажити вміст.",
   "no_results": "Результатів не знайдено",
