Add: not found state for podcast and video

--- a/src/pages/VideoInformation/locales/en.json
+++ b/src/pages/VideoInformation/locales/en.json
@@ -1,4 +1,5 @@
 {
   "more_videos": "More videos",
-  "read_more_button": "View more"
+  "read_more_button": "View more",
+  "not_found": "Video not found"
 }
