--- a/src/pages/VideoInformation/locales/uk.json
+++ b/src/pages/VideoInformation/locales/uk.json
@@ -1,4 +1,5 @@
 {
   "more_videos": "Більше відео",
-  "read_more_button": "Переглянути більше"
+  "read_more_button": "Переглянути більше",
+  "not_found": "Відео не знайдено"
 }
