--- a/src/pages/PodcastInformation/locales/ru.json
+++ b/src/pages/PodcastInformation/locales/ru.json
@@ -1,4 +1,5 @@
 {
   "more_podcasts": "Больше подкастов",
-  "view_more": "Посмотреть больше"
+  "view_more": "Посмотреть больше",
+  "not_found": "Подкаст не найден"
 }
