--- a/src/pages/VideoInformation/locales/kk.json
+++ b/src/pages/VideoInformation/locales/kk.json
@@ -1,4 +1,5 @@
 {
   "more_videos": "Көбірек видеолар",
-  "read_more_button": "Толығырақ көру"
+  "read_more_button": "Толығырақ көру",
+  "not_found": "Видео табылмады"
 }
