--- a/src/pages/VideoInformation/locales/pl.json
+++ b/src/pages/VideoInformation/locales/pl.json
@@ -1,4 +1,5 @@
 {
   "more_videos": "Więcej filmów",
-  "read_more_button": "Zobacz więcej"
+  "read_more_button": "Zobacz więcej",
+  "not_found": "Film nie znaleziony"
 }
