--- a/src/pages/VideoInformation/locales/ru.json
+++ b/src/pages/VideoInformation/locales/ru.json
@@ -1,4 +1,5 @@
 {
   "more_videos": "Больше видео",
-  "read_more_button": "Посмотреть больше"
+  "read_more_button": "Посмотреть больше",
+  "not_found": "Видео не найдено"
 }
