--- a/src/pages/ArticleInformation/locales/kk.json
+++ b/src/pages/ArticleInformation/locales/kk.json
@@ -3,5 +3,8 @@
   "no_results": "Таңдалған тілде ұқсас мақалалар жоқ.",
   "read_more_button": "Ары қарай оқу",
   "min_read": "минут оқуға",
-  "by": "Дайындаушы {{creator}}"
+  "by": "Дайындаушы {{creator}}",
+  "share_title": "Бұл контентті бөліс",
+  "share_success": "Сілтемені көшіріп алдыңыз!",
+  "copy_link": "Сілтемені көшіріңіз"
 }
