--- a/src/pages/ArticleInformation/locales/ru.json
+++ b/src/pages/ArticleInformation/locales/ru.json
@@ -3,5 +3,8 @@
   "no_results": "На выбранном языке нет похожих статей.",
   "read_more_button": "Узнать больше",
   "min_read": "минут на прочтение",
-  "by": "От {{creator}}"
+  "by": "От {{creator}}",
+  "share_title": "Поделиться этим контентом",
+  "share_success": "Ссылка скопирована в буфер обмена!",
+  "copy_link": "Скопировать ссылку"
 }
