--- a/src/pages/ArticleInformation/locales/uk.json
+++ b/src/pages/ArticleInformation/locales/uk.json
@@ -3,5 +3,8 @@
   "no_results": "Для поточної вибраної мови немає схожих статей. ",
   "read_more_button": "Читати далі",
   "min_read": "хв читання",
-  "by": "Від {{creator}}"
+  "by": "Від {{creator}}",
+  "share_title": "Поділитися цією статтею",
+  "share_success": "Посилання скопійовано в буфер обміну!",
+  "copy_link": "Скопіювати посилання"
 }
