--- a/src/pages/ArticleInformation/locales/kk.json
+++ b/src/pages/ArticleInformation/locales/kk.json
@@ -6,5 +6,6 @@
   "by": "Дайындаушы {{creator}}",
   "share_title": "Бұл контентті бөліс",
   "share_success": "Сілтемені көшіріп алдыңыз!",
-  "copy_link": "Сілтемені көшіріңіз"
+  "copy_link": "Сілтемені көшіріңіз",
+  "export_failed": "Экспорт қатесі. Қайтадан қайталаңыз."
 }
