--- a/src/pages/ArticleInformation/locales/ru.json
+++ b/src/pages/ArticleInformation/locales/ru.json
@@ -6,5 +6,6 @@
   "by": "От {{creator}}",
   "share_title": "Поделиться этим контентом",
   "share_success": "Ссылка скопирована в буфер обмена!",
-  "copy_link": "Скопировать ссылку"
+  "copy_link": "Скопировать ссылку",
+  "export_failed": "Экспорт не удался. Пожалуйста, попробуйте снова."
 }
