--- a/src/pages/ArticleInformation/locales/uk.json
+++ b/src/pages/ArticleInformation/locales/uk.json
@@ -6,5 +6,6 @@
   "by": "Від {{creator}}",
   "share_title": "Поділитися цією статтею",
   "share_success": "Посилання скопійовано в буфер обміну!",
-  "copy_link": "Скопіювати посилання"
+  "copy_link": "Скопіювати посилання",
+  "export_failed": "Експорт не вдався. Будь ласка, спробуйте ще раз."
 }
