Add: share functionality to Video

--- a/src/pages/VideoInformation/locales/uk.json
+++ b/src/pages/VideoInformation/locales/uk.json
@@ -1,5 +1,6 @@
 {
   "more_videos": "Більше відео",
   "read_more_button": "Переглянути більше",
-  "not_found": "Відео не знайдено"
+  "not_found": "Відео не знайдено",
+  "share_success": "Посилання на відео скопійовано до буферу обміну"
 }
