--- a/src/pages/VideoInformation/locales/en.json
+++ b/src/pages/VideoInformation/locales/en.json
@@ -1,5 +1,6 @@
 {
   "more_videos": "More videos",
   "read_more_button": "View more",
-  "not_found": "Video not found"
+  "not_found": "Video not found",
+  "share_success": "Video link copied to clipboard"
 }
