--- a/src/pages/VideoInformation/locales/kk.json
+++ b/src/pages/VideoInformation/locales/kk.json
@@ -1,5 +1,6 @@
 {
   "more_videos": "Көбірек видеолар",
   "read_more_button": "Толығырақ көру",
-  "not_found": "Видео табылмады"
+  "not_found": "Видео табылмады",
+  "share_success": "Видео сілтемесі буферге көшірілді"
 }
