--- a/src/pages/VideoInformation/locales/pl.json
+++ b/src/pages/VideoInformation/locales/pl.json
@@ -1,5 +1,6 @@
 {
   "more_videos": "Więcej filmów",
   "read_more_button": "Zobacz więcej",
-  "not_found": "Film nie znaleziony"
+  "not_found": "Film nie znaleziony",
+  "share_success": "Link do filmu został skopiowany do schowka"
 }
