--- a/src/pages/VideoInformation/locales/ru.json
+++ b/src/pages/VideoInformation/locales/ru.json
@@ -1,5 +1,6 @@
 {
   "more_videos": "Больше видео",
   "read_more_button": "Посмотреть больше",
-  "not_found": "Видео не найдено"
+  "not_found": "Видео не найдено",
+  "share_success": "Ссылка на видео скопирована в буфер обмена"
 }
