--- a/src/blocks/Articles/locales/kk.json
+++ b/src/blocks/Articles/locales/kk.json
@@ -6,5 +6,6 @@
   "read_more_button": "Ары қарай оқу",
   "min_read": "минут оқуға",
   "by": "Дайындаушы {{creator}}",
-  "number_of_more_options": "тағы {{count}}"
+  "number_of_more_options": "тағы {{count}}",
+  "read": "Оқылды"
 }
