--- a/src/blocks/OrganizationOverview/locales/en.json
+++ b/src/blocks/OrganizationOverview/locales/en.json
@@ -45,5 +45,6 @@
   "children": "Children",
   "children_disabilities": "Children with disabilities",
   "adults": "Adults",
-  "adults_disabilities": "Adults with disabilities"
+  "adults_disabilities": "Adults with disabilities",
+  "copy_link_success": "Link copied to clipboard!"
 }
