--- a/src/blocks/OrganizationOverview/locales/ru.json
+++ b/src/blocks/OrganizationOverview/locales/ru.json
@@ -45,5 +45,6 @@
   "children": "Дети",
   "children_disabilities": "Дети с инвалидностью",
   "adults": "Взрослые",
-  "adults_disabilities": "Взрослые с инвалидностью"
+  "adults_disabilities": "Взрослые с инвалидностью",
+  "copy_link_success": "Ссылка скопирована в буфер обмена!"
 }
