Fix: update emergency button text in Russian localization

--- a/src/blocks/Page/locales/ru.json
+++ b/src/blocks/Page/locales/ru.json
@@ -13,7 +13,7 @@
   "footer_7": "Настройки файлов cookie",
   "footer_8": "Часто задаваемые вопросы",
 
-  "emergency_button": "SOS-центр",
+  "emergency_button": "Экстренная помощь",
 
   "button_text": "Перейти к приложению",
   "contact_us": "Свяжитесь с нами",
