Refactor: hide some content when in RO

--- a/src/blocks/Page/locales/en.json
+++ b/src/blocks/Page/locales/en.json
@@ -3,6 +3,7 @@
   "page_2": "Consultations",
   "page_3": "Information portal",
   "page_4": "My Q&A",
+  "page_5": "Organizations",
 
   "footer_1": "Home",
   "footer_2": "Consultations",
