--- a/src/blocks/Page/locales/kk.json
+++ b/src/blocks/Page/locales/kk.json
@@ -3,6 +3,7 @@
   "page_2": "Консультациялар",
   "page_3": "Ақпараттық портал",
   "page_4": "Менің Q&A",
+  "page_5": "Ұйымдар",
 
   "footer_1": "Бас бет",
   "footer_2": "Консультациялар",
