--- a/src/blocks/Page/locales/pl.json
+++ b/src/blocks/Page/locales/pl.json
@@ -3,6 +3,7 @@
   "page_2": "Konsultacje",
   "page_3": "Portal informacyjny",
   "page_4": "Q&A",
+  "page_5": "Organizacje",
 
   "footer_1": "Strona główna",
   "footer_2": "Konsultacje",
