--- a/src/blocks/Page/locales/ru.json
+++ b/src/blocks/Page/locales/ru.json
@@ -3,6 +3,7 @@
   "page_2": "Консультации",
   "page_3": "Информационный портал",
   "page_4": "Q&A",
+  "page_5": "Организации",
 
   "footer_1": "Главная страница",
   "footer_2": "Консультации",
