--- a/src/blocks/Page/locales/uk.json
+++ b/src/blocks/Page/locales/uk.json
@@ -3,6 +3,7 @@
   "page_2": "Консультації",
   "page_3": "Інформаційний портал",
   "page_4": "Q&A",
+  "page_5": "Організації",
 
   "footer_1": "Головна",
   "footer_2": "Консультації",
