--- a/src/pages/InformationPortal/locales/ru.json
+++ b/src/pages/InformationPortal/locales/ru.json
@@ -8,13 +8,13 @@
   "read_more_button": "Узнать больше",
   "min_read": "минут на прочтение",
   "by": "От {{creator}}",
-  "articles": "Мақалалар",
-  "videos": "Видеолар",
-  "heading_newest_videos": "Жаңа Видеолар",
-  "heading_popular_videos": "Ең танымал Видеолар",
-  "no_results": "Нәтиже табылмады",
-  "heading_newest_podcasts": "Новые аудиобаки",
-  "heading_popular_podcasts": "Самые популярные аудиобаки",
+  "articles": "Статьи",
+  "videos": "Видео",
+  "heading_newest_videos": "Новейшие видео",
+  "heading_popular_videos": "Самые популярные видео",
+  "no_results": "Нет результатов",
+  "heading_newest_podcasts": "Новейшие подкасты",
+  "heading_popular_podcasts": "Популярные подкасты",
   "podcasts": "Подкасты",
-  "view_more": "Больше посмотреть"
+  "view_more": "Посмотреть больше"
 }
