Refactor: show placeholder map in the MascotWelcomeHeader when in RO

--- a/src/blocks/MascotWelcomeHeader/locales/en.json
+++ b/src/blocks/MascotWelcomeHeader/locales/en.json
@@ -27,5 +27,6 @@
   "october": "October",
   "november": "November",
   "december": "December",
-  "coupon": "Coupon"
+  "coupon": "Coupon",
+  "explore_button_label": "Explore"
 }
