--- a/src/blocks/MascotWelcomeHeader/locales/pl.json
+++ b/src/blocks/MascotWelcomeHeader/locales/pl.json
@@ -27,5 +27,6 @@
   "october": "Październik",
   "november": "Listopad",
   "december": "Grudzień",
-  "coupon": "Kupon"
+  "coupon": "Kupon",
+  "explore_button_label": "Odkryj"
 }
