--- a/src/blocks/MascotWelcomeHeader/locales/ru.json
+++ b/src/blocks/MascotWelcomeHeader/locales/ru.json
@@ -27,5 +27,6 @@
   "october": "октября",
   "november": "ноября",
   "december": "декабря",
-  "coupon": "Купон"
+  "coupon": "Купон",
+  "explore_button_label": "Исследовать"
 }
