--- a/src/blocks/MascotWelcomeHeader/locales/uk.json
+++ b/src/blocks/MascotWelcomeHeader/locales/uk.json
@@ -27,5 +27,6 @@
   "october": "Жовтень",
   "november": "Листопад",
   "december": "Грудень",
-  "coupon": "Купон"
+  "coupon": "Купон",
+  "explore_button_label": "Дослідити"
 }
