--- a/src/blocks/MascotWelcomeHeader/locales/kk.json
+++ b/src/blocks/MascotWelcomeHeader/locales/kk.json
@@ -27,5 +27,6 @@
   "october": "қазан",
   "november": "қараша",
   "december": "желтоқсан",
-  "coupon": "Купон"
+  "coupon": "Купон",
+  "explore_button_label": "Зерттеу"
 }
