--- a/src/blocks/GiveSuggestion/locales/uk.json
+++ b/src/blocks/GiveSuggestion/locales/uk.json
@@ -8,5 +8,6 @@
   "modal_text": "Прикро, що Ви не змогли знайти те, що шукали. Постараємося розглянути Вашу пропозицію якомога швидше. Дякуємо за відгук!",
   "modal_cta_label": "Ознайомтеся з іншими статтями",
 
-  "error": "Будь ласка, введіть пропозицію"
+  "error": "Будь ласка, введіть пропозицію",
+  "send_success_text": "Ваша пропозиція успішно надіслана"
 }
