--- a/src/blocks/Organizations/locales/en.json
+++ b/src/blocks/Organizations/locales/en.json
@@ -4,27 +4,27 @@
   "phone_interaction": "Phone",
   "hybrid_interaction": "Hybrid",
 
-  "cash": "Cash",
-  "bank_transfer": "Bank transfer",
-  "card": "Card",
-  "free": "Free",
+  "free_services": "Free services",
+  "paid_services": "Paid services",
+  "co_payment_services": "Co-payment services",
+  "cnas_reimbursed_services": "CNAS reimbursed services",
 
-  "individual_psychotherapy": "Individual psychotherapy",
-  "group_psychotherapy": "Group psychotherapy",
-  "individual_psychological_counseling": "Individual psychological counseling",
-  "group_psychological_counseling": "Group psychological counseling",
-  "personal_development_counseling": "Personal development counseling",
-  "speech_therapy": "Speech therapy",
-  "social_information_counseling": "Social information and counseling",
-  "rehab_autism_children": "Rehabilitation and recovery services for children with autism",
-  "rehab_psycho_neuro_children": "Rehabilitation and recovery services for children with psycho-neuro-motor disorders",
-  "suicide_prevention_helpline": "Suicide prevention helpline",
-  "addiction_helpline": "Addiction helpline",
   "violence_victim_helpline": "Violence victims helpline",
+  "individual_psychotherapy": "Individual psychotherapy",
+  "social_information_counseling": "Social information and counseling",
+  "rehab_psycho_neuro_children": "Rehabilitation and recovery services for children with psycho-neuro-motor disorders",
+  "individual_psychological_counseling": "Individual psychological counseling",
+  "personal_development_counseling": "Personal development counseling",
   "child_helpline": "Child helpline",
+  "speech_therapy": "Speech therapy",
+  "suicide_prevention_helpline": "Suicide prevention helpline",
   "child_psychiatry": "Child psychiatry",
-  "art_recreational_activities": "Artistic recreational activities (theatre, music, poetry, painting, storytelling)",
+  "group_psychological_counseling": "Group psychological counseling",
   "sport_recreational_activities": "Sports recreational activities (sports, games, dance)",
+  "rehab_autism_children": "Rehabilitation and recovery services for children with autism",
+  "art_recreational_activities": "Artistic recreational activities (theatre, music, poetry, painting, storytelling)",
+  "addiction_helpline": "Addiction helpline",
+  "group_psychotherapy": "Group psychotherapy",
 
   "sector_1": "Sector 1",
   "sector_2": "Sector 2",
@@ -33,17 +33,28 @@
   "sector_5": "Sector 5",
   "sector_6": "Sector 6",
 
-  "children": "Children",
-  "children_disabilities": "Children with disabilities",
-  "adults": "Adults",
-  "adults_disabilities": "Adults with disabilities",
+  "aggression_violence_victim_or_aggressor": "Aggression/violence - victim or aggressor",
+  "learning_difficulties_special_educational_needs": "Learning difficulties/Special educational needs",
+  "behavioral_disorder": "Behavioral disorder",
+  "eating_disorder": "Eating disorder",
+  "suicide_self_harm": "Suicide/Self-harm",
+  "addiction": "Addiction",
+  "identity_issues": "Identity issues",
+  "illness_oncological_treatment_chronic_diseases": "Illness (oncological treatment, chronic diseases)",
+  "other_situations": "Other situations",
 
-  "work_with_placeholder": "Select work with",
-  "specialisation_placeholder": "Select specialisations",
-  "district_placeholder": "Select district",
-  "payment_method_placeholder": "Select payment method",
-  "user_interaction_placeholder": "Select user interaction",
-  "search_placeholder": "Search by name or unit name",
+  "public": "Public",
+  "private": "Private",
+  "ong": "NGO",
+  "public_private": "Public-private",
+
+  "work_with_placeholder": "Select work with categories",
+  "specialisations_placeholder": "Select offered services",
+  "district_placeholder": "Select sector",
+  "payment_methods_placeholder": "Select payment methods",
+  "user_interactions_placeholder": "Select interaction modes",
+  "property_types_placeholder": "Select property types",
+  "search_placeholder": "Search by organization name",
 
   "no_data_found": "No data found",
   "reset_filters": "Reset filters",
