--- a/src/blocks/Organizations/locales/kk.json
+++ b/src/blocks/Organizations/locales/kk.json
@@ -3,44 +3,64 @@
   "online_interaction": "Онлайн",
   "phone_interaction": "Телефон арқылы",
   "hybrid_interaction": "Аралас",
-  "cash": "Нақ ақша",
-  "bank_transfer": "Банк аударымы",
-  "card": "Карта",
-  "free": "Тегін",
+
+  "free_services": "Тегін қызметтер",
+  "paid_services": "Ақылы қызметтер",
+  "co_payment_services": "Қосымша төлемі бар қызметтер",
+  "cnas_reimbursed_services": "CNAS өтейтін қызметтер",
+
+  "emergency_situations": "Төтенше жағдайлар",
+  "pediatric_psychiatry": "Балалар психиатриясы",
+  "psychological_evaluation": "Психологиялық бағалау",
+  "psychological_counseling": "Психологиялық кеңес беру",
   "individual_psychotherapy": "Жеке психотерапия",
   "group_psychotherapy": "Топтық психотерапия",
-  "individual_psychological_counseling": "Жеке психологиялық кеңес",
-  "group_psychological_counseling": "Топтық психологиялық кеңес",
-  "personal_development_counseling": "Жеке даму бойынша кеңес",
-  "speech_therapy": "Сөйлеу терапиясы",
-  "social_information_counseling": "Әлеуметтік ақпарат және кеңес беру",
-  "rehab_autism_children": "Аутизмі бар балаларға арналған оңалту және қалпына келтіру қызметтері",
-  "rehab_psycho_neuro_children": "Психонейромоторлық бұзылыстары бар балаларға арналған оңалту және қалпына келтіру қызметтері",
-  "suicide_prevention_helpline": "Өзін-өзі өлтіруден сақтандыру сенім телефоны",
-  "addiction_helpline": "Тәуелділік бойынша сенім телефоны",
-  "violence_victim_helpline": "Зорлық құрбандарына арналған сенім телефоны",
-  "child_helpline": "Балалар сенім телефоны",
-  "child_psychiatry": "Балалар психиатриясы",
-  "art_recreational_activities": "Көркемдік демалыс шаралары (театр, музыка, поэзия, сурет, әңгімелеу)",
-  "sport_recreational_activities": "Спорттық демалыс шаралары (спорт, ойындар, би)",
+  "support_groups": "Қолдау топтары",
+  "social_assistance_and_counseling": "Әлеуметтік көмек және кеңес беру",
+  "personal_development": "Жеке дамыту",
+  "vocational_counseling_and_career_guidance": "Кәсіби кеңес беру және мансапты бағыттау",
+  "speech_therapy": "Логопедия",
+  "occupational_therapy_ergotherapy": "Еңбек терапиясы/Эрготерапия",
+  "physiotherapy_physical_recovery": "Физиотерапия/Физикалық қалпына келтіру",
+  "autism_spectrum_disorder_therapies": "Аутизм спектрі бұзылысының терапиялары",
+  "disability_assessment": "Мүгедектікті бағалау",
+  "pediatric_neurology": "Балалар неврологиясы",
+  "special_psychopedagogy": "Арнайы психопедагогика",
+  "neuropsychomotor_recovery": "Нейропсихомоторлық қалпына келтіру",
+
   "sector_1": "1-сектор",
   "sector_2": "2-сектор",
   "sector_3": "3-сектор",
   "sector_4": "4-сектор",
   "sector_5": "5-сектор",
   "sector_6": "6-сектор",
-  "children": "Балалар",
-  "children_disabilities": "Мүгедек балалар",
-  "adults": "Ересектер",
-  "adults_disabilities": "Мүгедек ересектер",
-  "work_with_placeholder": "Қаймен жұмыс істейтінін таңдаңыз",
-  "specialisation_placeholder": "Мамандандыруды таңдаңыз",
-  "district_placeholder": "Ауданды таңдаңыз",
-  "payment_method_placeholder": "Төлем әдісін таңдаңыз",
-  "user_interaction_placeholder": "Қолданушымен өзара әрекеттесу түрін таңдаңыз",
-  "search_placeholder": "Аты немесе ұйым атауы бойынша іздеу",
+
+  "aggression_violence_victim_or_aggressor": "Агрессия/зорлық-зомбылық - жәбірленуші немесе агрессор",
+  "learning_difficulties_special_educational_needs": "Оқу қиындықтары/Арнайы білім беру қажеттіліктері",
+  "behavioral_disorder": "Мінез-құлық бұзылысы",
+  "eating_disorder": "Тамақтану бұзылысы",
+  "suicide_self_harm": "Суицид/Өзіне зиян келтіру",
+  "addiction": "Тәуелділік",
+  "identity_issues": "Сәйкестік мәселелері",
+  "illness_oncological_treatment_chronic_diseases": "Ауру (онкологиялық емдеу, созылмалы аурулар)",
+  "other_situations": "Басқа жағдайлар",
+
+  "public": "Мемлекеттік",
+  "private": "Жеке",
+  "ong": "ҮЕҰ",
+  "public_private": "Мемлекеттік-жеке",
+
+  "work_with_placeholder": "Жұмыс санаттарын таңдаңыз",
+  "specialisations_placeholder": "Ұсынылатын қызметтерді таңдаңыз",
+  "district_placeholder": "Секторды таңдаңыз",
+  "payment_methods_placeholder": "Төлем әдістерін таңдаңыз",
+  "user_interactions_placeholder": "Өзара әрекеттесу режимдерін таңдаңыз",
+  "property_types_placeholder": "Меншік түрлерін таңдаңыз",
+  "search_placeholder": "Ұйым атауы бойынша іздеу",
+
   "no_data_found": "Деректер табылмады",
   "reset_filters": "Фильтрлерді қалпына келтіру",
+
   "view_organization_details": "Ұйым туралы ақпаратты көру",
   "address": "Мекенжай",
   "phone": "Телефон",
