--- a/src/blocks/Organizations/locales/uk.json
+++ b/src/blocks/Organizations/locales/uk.json
@@ -3,44 +3,64 @@
   "online_interaction": "Онлайн",
   "phone_interaction": "Телефон",
   "hybrid_interaction": "Гібридно",
-  "cash": "Готівка",
-  "bank_transfer": "Банківський переказ",
-  "card": "Картка",
-  "free": "Безкоштовно",
+
+  "free_services": "Безкоштовні послуги",
+  "paid_services": "Платні послуги",
+  "co_payment_services": "Послуги з доплатою",
+  "cnas_reimbursed_services": "Послуги, що відшкодовуються CNAS",
+
+  "emergency_situations": "Екстрені ситуації",
+  "pediatric_psychiatry": "Дитяча психіатрія",
+  "psychological_evaluation": "Психологічна оцінка",
+  "psychological_counseling": "Психологічне консультування",
   "individual_psychotherapy": "Індивідуальна психотерапія",
   "group_psychotherapy": "Групова психотерапія",
-  "individual_psychological_counseling": "Індивідуальне психологічне консультування",
-  "group_psychological_counseling": "Групове психологічне консультування",
-  "personal_development_counseling": "Консультування з розвитку особистості",
-  "speech_therapy": "Логопедична терапія",
-  "social_information_counseling": "Соціальне інформування та консультування",
-  "rehab_autism_children": "Реабілітація та відновлювальні послуги для дітей з аутизмом",
-  "rehab_psycho_neuro_children": "Реабілітація та відновлювальні послуги для дітей з психонейромоторними порушеннями",
-  "suicide_prevention_helpline": "Лінія довіри з профілактики суїциду",
-  "addiction_helpline": "Лінія довіри для залежних",
-  "violence_victim_helpline": "Лінія довіри для постраждалих від насильства",
-  "child_helpline": "Дитяча лінія довіри",
-  "child_psychiatry": "Дитяча психіатрія",
-  "art_recreational_activities": "Мистецькі рекреаційні заходи (театр, музика, поезія, живопис, оповідання)",
-  "sport_recreational_activities": "Спортивні рекреаційні заходи (спорт, ігри, танець)",
+  "support_groups": "Групи підтримки",
+  "social_assistance_and_counseling": "Соціальна допомога та консультування",
+  "personal_development": "Особистісний розвиток",
+  "vocational_counseling_and_career_guidance": "Професійне консультування та кар'єрне керівництво",
+  "speech_therapy": "Логопедія",
+  "occupational_therapy_ergotherapy": "Трудотерапія/Ерготерапія",
+  "physiotherapy_physical_recovery": "Фізіотерапія/Фізичне відновлення",
+  "autism_spectrum_disorder_therapies": "Терапії розладів аутистичного спектру",
+  "disability_assessment": "Оцінка інвалідності",
+  "pediatric_neurology": "Дитяча неврологія",
+  "special_psychopedagogy": "Спеціальна психопедагогіка",
+  "neuropsychomotor_recovery": "Нейропсихомоторне відновлення",
+
   "sector_1": "Сектор 1",
   "sector_2": "Сектор 2",
   "sector_3": "Сектор 3",
   "sector_4": "Сектор 4",
   "sector_5": "Сектор 5",
   "sector_6": "Сектор 6",
-  "children": "Діти",
-  "children_disabilities": "Діти з інвалідністю",
-  "adults": "Дорослі",
-  "adults_disabilities": "Дорослі з інвалідністю",
-  "work_with_placeholder": "Виберіть категорію",
-  "specialisation_placeholder": "Виберіть спеціалізації",
-  "district_placeholder": "Виберіть район",
-  "payment_method_placeholder": "Виберіть спосіб оплати",
-  "user_interaction_placeholder": "Виберіть спосіб взаємодії",
-  "search_placeholder": "Пошук за ім'ям або назвою установи",
+
+  "aggression_violence_victim_or_aggressor": "Агресія/насильство - жертва або агресор",
+  "learning_difficulties_special_educational_needs": "Труднощі навчання/Особливі освітні потреби",
+  "behavioral_disorder": "Поведінковий розлад",
+  "eating_disorder": "Розлад харчової поведінки",
+  "suicide_self_harm": "Суїцид/Самошкодження",
+  "addiction": "Залежність",
+  "identity_issues": "Проблеми ідентичності",
+  "illness_oncological_treatment_chronic_diseases": "Хвороба (онкологічне лікування, хронічні захворювання)",
+  "other_situations": "Інші ситуації",
+
+  "public": "Державний",
+  "private": "Приватний",
+  "ong": "НГО",
+  "public_private": "Державно-приватний",
+
+  "work_with_placeholder": "Оберіть категорії роботи",
+  "specialisations_placeholder": "Оберіть послуги, що пропонуються",
+  "district_placeholder": "Оберіть сектор",
+  "payment_methods_placeholder": "Оберіть способи оплати",
+  "user_interactions_placeholder": "Оберіть режими взаємодії",
+  "property_types_placeholder": "Оберіть типи власності",
+  "search_placeholder": "Пошук за назвою організації",
+
   "no_data_found": "Дані не знайдені",
   "reset_filters": "Скинути фільтри",
+
   "view_organization_details": "Переглянути деталі організації",
   "address": "Адреса",
   "phone": "Телефон",
