--- a/src/blocks/OrganizationOverview/locales/en.json
+++ b/src/blocks/OrganizationOverview/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "error-loading-data": "An error occurred while loading the organization data",
+  "error_loading_data": "An error occurred while loading the organization data",
   "other_services_label": "Other services",
   "address_label": "Address",
   "sector_label": "District",
