--- a/src/blocks/OrganizationOverview/locales/uk.json
+++ b/src/blocks/OrganizationOverview/locales/uk.json
@@ -1,5 +1,5 @@
 {
-  "error-loading-data": "Під час завантаження даних організації сталася помилка",
+  "error_loading_data": "Під час завантаження даних організації сталася помилка",
   "other_services_label": "Інші послуги",
   "address_label": "Адреса",
   "sector_label": "Район",
