--- a/src/blocks/OrganizationOverview/locales/kk.json
+++ b/src/blocks/OrganizationOverview/locales/kk.json
@@ -1,5 +1,5 @@
 {
-  "error-loading-data": "Ұйым деректерін жүктеу кезінде қате орын алды",
+  "error_loading_data": "Ұйым деректерін жүктеу кезінде қате орын алды",
   "description_label": "Сипаттама",
   "address_label": "Мекенжай",
   "district_label": "Аудан",
