Add: Heading to the Articles page

--- a/src/pages/Articles/locales/en.json
+++ b/src/pages/Articles/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "heading": "Articles",
   "heading_default": "All Articles",
   "heading_newest": "Newest Articles",
   "heading_most_read": "Most read Articles",
