--- a/src/pages/Articles/locales/kk.json
+++ b/src/pages/Articles/locales/kk.json
@@ -1,4 +1,5 @@
 {
+  "heading": "Мақалалар",
   "heading_default": "Барлық мақалалар",
   "heading_newest": "Соңғы мақалалар",
   "heading_most_read": "Ең көп оқылатын мақалалар",
