--- a/src/pages/Articles/locales/pl.json
+++ b/src/pages/Articles/locales/pl.json
@@ -1,4 +1,5 @@
 {
+  "heading": "Artykuły",
   "heading_default": "Wszystkie artykuły",
   "heading_newest": "Najnowsze artykuły",
   "heading_most_read": "Najczęściej czytane artykuły",
