--- a/src/pages/Articles/locales/ru.json
+++ b/src/pages/Articles/locales/ru.json
@@ -1,4 +1,5 @@
 {
+  "heading": "Статьи",
   "heading_default": "Все статьи",
   "heading_newest": "Новые статьи",
   "heading_most_read": "Наиболее читаемые статьи",
