--- a/src/pages/Articles/locales/uk.json
+++ b/src/pages/Articles/locales/uk.json
@@ -1,4 +1,5 @@
 {
+  "heading": "Статті",
   "heading_default": "Всі статті",
   "heading_newest": "Найновіші статті",
   "heading_most_read": "Найпопулярніші статті",
