Refactor: read more button en label for CardMedia

--- a/src/blocks/ArticlesDashboard/locales/en.json
+++ b/src/blocks/ArticlesDashboard/locales/en.json
@@ -3,7 +3,7 @@
   "heading_no_results": "No results.",
   "view_all": "View all",
   "all": "All",
-  "read_more_button": "Read more",
+  "read_more_button": "Click to read more",
   "min_read": "min read",
   "by": "by {{creator}}",
   "number_of_more_options": "{{count}} more"
