--- a/src/blocks/MyQA/locales/en.json
+++ b/src/blocks/MyQA/locales/en.json
@@ -5,7 +5,7 @@
   "today": "Today",
   "archive": "Archive",
   "respond": "Respond",
-  "read_more": "Read more",
+  "read_more": "Click to read more",
   "all": "All",
   "all_languages": "All languages",
   "most_popular": "Most Popular",
