--- a/src/pages/ArticleInformation/locales/en.json
+++ b/src/pages/ArticleInformation/locales/en.json
@@ -1,7 +1,7 @@
 {
   "heading": "More Articles",
   "no_results": "There are no similar articles for the current selected language. ",
-  "read_more_button": "Read more",
+  "read_more_button": "Click to read more",
   "min_read": "min read",
   "by": "by {{creator}}",
   "share_title": "Share this content",
