--- a/src/pages/InformationPortal/locales/en.json
+++ b/src/pages/InformationPortal/locales/en.json
@@ -5,7 +5,7 @@
   "heading_popular": "Most popular",
   "heading_no_language_results": "We could not find any articles based on your selected language.",
   "view_all": "View all",
-  "read_more_button": "Read more",
+  "read_more_button": "Click to read more",
   "min_read": "min read",
   "by": "By {{creator}}",
   "articles": "Articles",
