Add: display the result in BasementAssesment and add translations

--- a/src/blocks/BaselineAssesment/locales/en.json
+++ b/src/blocks/BaselineAssesment/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "instructions": "Instructions: Thinking about the last two weeks, please choose the option that you think fits you best for the following statements.",
   "stress_level": "I am very stressed.",
   "sadness_anxiety": "I often feel sad or anxious.",
   "fear_frequency": "I feel afraid(s) often.",
