--- a/src/blocks/ContactUs/locales/uk.json
+++ b/src/blocks/ContactUs/locales/uk.json
@@ -16,5 +16,9 @@
   "contact_reason_2": "Мені потрібна додаткова інформація про послуги, що надаються через платформу",
   "contact_reason_3": "Я клієнт(ка), і у мене виникла технічна проблема",
   "contact_reason_4": "Ще дещо.",
+  "contact_reason_1_pl": "Информация о uSupport",
+  "contact_reason_2_pl": "Техническая проблема",
+  "contact_reason_3_pl": "Жалоба",
+  "contact_reason_4_pl": "Прочее",
   "contact_form": "Контактна форма"
 }
