--- a/src/pages/VideoInformation/locales/ru.json
+++ b/src/pages/VideoInformation/locales/ru.json
@@ -2,5 +2,7 @@
   "more_videos": "Больше видео",
   "read_more_button": "Посмотреть больше",
   "not_found": "Видео не найдено",
-  "share_success": "Ссылка на видео скопирована в буфер обмена"
+  "share_success": "Ссылка на видео скопирована в буфер обмена",
+  "require_cookies": "Для просмотра этого видео, пожалуйста, примите все файлы cookie.",
+  "cookie_preferences": "Настройки файлов cookie"
 }
