--- a/src/pages/VideoInformation/locales/kk.json
+++ b/src/pages/VideoInformation/locales/kk.json
@@ -2,5 +2,7 @@
   "more_videos": "Көбірек видеолар",
   "read_more_button": "Толығырақ көру",
   "not_found": "Видео табылмады",
-  "share_success": "Видео сілтемесі буферге көшірілді"
+  "share_success": "Видео сілтемесі буферге көшірілді",
+  "require_cookies": "Бұл видео көру үшін, барлық cookie-лерді қабылдаңыз.",
+  "cookie_preferences": "Cookie параметрлері"
 }
