--- a/src/locales/kk.json
+++ b/src/locales/kk.json
@@ -809,6 +809,56 @@
       "other_situations": "Басқа жағдайлар",
 
       "copy_link_success": "Сілтеме алмасу буферіне көшірілді!"
+    },
+    "baseline-assesment": {
+      "instructions": "Нұсқаулар: Соңғы екі аптадағы жағдайыңызды еске түсіріп, төмендегі мәлімдемелерге сізге ең сәйкес келетін нұсқаны таңдаңыз.",
+      "stress_level": "Мен қатты күйзелістемін.",
+      "sadness_anxiety": "Мен жиі мұңайып немесе алаңдаймын.",
+      "fear_frequency": "Мен жиі қорқамын.",
+      "emotion_control": "Мен эмоцияларымды бақылау өте қиын.",
+      "worry_anxiety": "Мен жиі уайымдап, мазасызданамын.",
+      "nervousness": "Мен жиі қобалжимын.",
+      "sensitivity_agitation": "Мен басқаларға қарағанда ашушаң әрі сезімталмын.",
+      "physical_weakness": "Мен өзімді әлсіз сезінемін немесе жиі ауырамын.",
+      "tired_waking": "Мен ұйқыдан шаршап тұрамын.",
+      "body_health_concerns": "Мен денемде бір ауыр дерт бар деп ойлаймын.",
+      "slow_movements": "Мен басқаларға қарағанда баяу қозғалып, баяу әрекет етемін.",
+      "friendship_difficulty": "Мен басқа балалармен достасу қиын. Жалғыз болғанды ұнатамын.",
+      "communication_difficulty": "Мен достарыммен немесе отбасыммен сөйлесу қиын.",
+      "emotional_expression": "Мен өз сезімдерімді ашық айта алмаймын.",
+      "parental_overwhelm": "Ата-анам мені қатты қысады деп сезінемін.",
+      "school_helplessness": "Мен мектепте басқалардың алдында дәрменсізбін.",
+      "difficult_parents": "Менің ата-анам өте қиын адамдар.",
+      "concentration_problems": "Менің зейін қоюым қиын.",
+      "lack_happiness": "Маған шынымен қуаныш сыйлайтын нәрсе аз.",
+      "maturity_pressure": "Мен тезірек есейуім керек сияқты сезінемін.",
+      "internet_dependency": "Интернетсіз өзімді жалғыз сезінер едім.",
+      "economic_bullying": "Мен достарым немесе сыныптастарыммен бірдей заттарды (мысалы, киім, телефон және т.б.) ала алмағаным үшін мазақталғанмын немесе шеттетілгенмін.",
+      "few_friends": "Менің достарым аз.",
+      "nightmares": "Мен жиі қорқынышты түстер көремін.",
+      "appetite_loss": "Менің тәбетім жоқ.",
+      "substance_use": "Мен бірнеше рет темекі шегіп немесе заңсыз заттар (алкоголь, есірткі және т.б.) қолданып көрдім.",
+      "frequent_headaches": "Мен жиі себепсіз басым ауырады.",
+
+      "question": "Сұрақ {{number}} / {{total}}",
+      "completed": "{{percentage}}% аяқталды",
+      "back": "Артқа",
+      "next": "Келесі",
+      "start_assessment": "Бағалауды бастау",
+      "finish_assessment": "Бағалауды аяқтау",
+      "assessment_completed": "Бағалау аяқталды",
+      "assessment_completed_description": "Бағалауды аяқтағаныңызға рахмет. Жауаптарыңыз сақталды және сізге көмектесу үшін пайдаланылады.",
+      "assessment_completed_button": "Басты бетке қайту"
+    },
+    "baseline-assesment-result": {
+      "assessment_completed": "Бағалау аяқталды",
+      "loading_results": "Нәтижелеріңіз жүктелуде...",
+      "recommended_articles": "Ұсынылған мақалалар",
+      "recommended_videos": "Ұсынылған бейнелер",
+      "recommended_podcasts": "Ұсынылған подкасттар",
+      "read_more_button": "Толығырақ",
+      "by": "{{creator}} авторы",
+      "min_read": "мин оқу"
     }
   },
   "pages": {
@@ -1298,6 +1348,17 @@
       "confirm": "Иә, чат деректерімді бәрін жою",
       "cancel": "Жоқ, чат деректерімді сақтау",
       "success": "Сіздің чат тарихы сәтті жойылды."
+    },
+    "baseline-assesment-modal": {
+      "heading": "Бастапқы бағалау",
+      "paragraph_1": "Төмендегі сұрақтар сіздің жағдайыңызды жақсырақ түсінуге және өзіңізді жақсы сезіну үшін көмек қажет пе екенін анықтауға көмектеседі. Сұрақтар соңғы екі аптадағы көңіл-күйіңіз, ойларыңыз және сезімдеріңіз туралы. Дұрыс немесе қате жауап жоқ, тек сізді сипаттайтын жауаптар бар. Не сезініп жүргеніңізді түсіну және көмектесу үшін мүмкіндігінше шынайы жауап беру маңызды.",
+      "paragraph_2": "Соңында сіз өзіңізді қалай сезініп жүргеніңіз және жағдайыңыз туралы біреумен сөйлесу маңызды ма екені жөнінде жауап аласыз. Қажет болса, біз сізге кімге жүгінуге болатынын айтамыз – бұл мектеп кеңесшісі, психолог немесе басқа маман болуы мүмкін.",
+      "paragraph_3": "Мұнда берген барлық жауаптарыңыз құпия, сізден аты-жөніңіз немесе жеке басыңызды анықтайтын басқа ақпарат сұралмайды. Сондықтан қауіпсізсіз, ашық әрі шынайы бола аласыз. Бұл сауалнама бірнеше минут қана алады және өзіңізді жақсы сезінуге алғашқы қадам бола алады.",
+      "paragraph_4": "Дайынсыз ба? Бастайық! 😊",
+      "privacy": "Құпиялылық және қауіпсіздік",
+      "consent": "Жалғастыру үшін, біздің <0>Құпиялылық саясатымызға</0> келісіңіз",
+      "cta_label": "Мен сауалнаманы толтыруға келісемін.",
+      "secondary_cta_label": "Мен сауалнаманы толтырғым келмейді"
     }
   },
   "routes": {
