--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -727,7 +727,7 @@
       "no_data_found": "No data found",
       "reset_filters": "Reset filters",
 
-      "view_organization_details": "View Organization Details",
+      "view_organization_details": "Read more",
       "address": "Address",
       "phone": "Phone",
       "email": "Email"
